--- a/style.css
+++ b/style.css
@@ -152,6 +152,27 @@ pre {
         overflow-x: auto;
     }
 
+    p {
+        color: #cccccc;
+        line-height: 1.6;
+        margin: 15px 0;
+    }
+    
+    a {
+        color: #76a9ff;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    
+    a:hover {
+        color: #a9d1ff;
+        text-decoration: underline;
+    }
+    
+    a:visited {
+        color: #577a99;
+    }
+
     .tabs {
         position: relative;
         margin: 20px 0;
