--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ pre {
     }
 
     p {
-        color: #cccccc;
+        color: #ffffff;
         line-height: 1.6;
         margin: 15px 0;
     }
