--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1, h2 {
+h1, h2, h3 {
     color: #333;
 }
 
@@ -111,7 +111,7 @@ pre {
         box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);  /* Softer shadow for dark mode */
     }
     
-    h1, h2 {
+    h1, h2, h3 {
         color: #cfcfcf;  /* Lighter text color */
     }
     
